LegacyWebApp/appliances/vm-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: legacy-webapp
  namespace: dotnet-legacy
spec:
  host: legacy-webapp-dotnet-legacy.apps.aromerot.redhat-openshift.com
  to:
    kind: Service
    name: legacy-web-app-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
